--- a/backend/package.json
+++ b/backend/package.json
@@ -24,6 +24,8 @@
     "@nestjs/config": "^4.0.2",
     "@nestjs/core": "^11.0.1",
     "@nestjs/platform-express": "^11.0.1",
+    "@nestjs/platform-socket.io": "^11.1.2",
+    "@nestjs/websockets": "^11.1.2",
     "@spotify/web-api-ts-sdk": "^1.2.0",
     "reflect-metadata": "^0.2.2",
     "rxjs": "^7.8.1"
