--- a/backend/package.json
+++ b/backend/package.json
@@ -26,7 +26,10 @@
     "@nestjs/platform-express": "^11.0.1",
     "@nestjs/platform-socket.io": "^11.1.2",
     "@nestjs/websockets": "^11.1.2",
+    "@prisma/client": "^6.8.2",
     "@spotify/web-api-ts-sdk": "^1.2.0",
+    "@supabase/supabase-js": "^2.49.8",
+    "nanoid": "^5.1.5",
     "reflect-metadata": "^0.2.2",
     "rxjs": "^7.8.1"
   },
@@ -48,6 +51,7 @@
     "globals": "^16.0.0",
     "jest": "^29.7.0",
     "prettier": "^3.4.2",
+    "prisma": "^6.8.2",
     "source-map-support": "^0.5.21",
     "supertest": "^7.0.0",
     "ts-jest": "^29.2.5",
